# communciation-terminal

./: CMakeLists.txt  main.cpp
source/: Configuration.cpp  Configuration.h
widgets/: MainWindow.cpp  MainWindow.h  PortComboBox.cpp  PortComboBox.h  windowWidgets.h
widgets/common/: ComboBox.cpp  ComboBox.h  LineEdit.h  PlainTextEdit.cpp  PlainTextEdit.h  PushButton.cpp  PushButton.h
